--- a/src/pages/fulfillment-detail/fulfillment-detail.html
+++ b/src/pages/fulfillment-detail/fulfillment-detail.html
@@ -72,7 +72,8 @@
             <br>
             <p ion-text text-lg text-wrap text-uppercase>Line1 : <b>{{address.addressLine1}}</b></p>
             <p ion-text text-lg text-wrap text-uppercase>Line2 : <b>{{address.addressLine2}}</b></p>
-            <p ion-text text-lg text-wrap text-uppercase>Landmark : <b>{{address.landmark}}</b></p>
+            <p ion-text text-lg text-wrap text-uppercase>Landmark : <b>{{address.landmark || 'N/A'}}</b></p>
+            <p ion-text text-lg text-wrap text-uppercase *ngIf=address.flatAndBlock>Flat & Block : <b>{{address.flatAndBlock || 'N/A'}}</b></p>
             <p ion-text text-lg text-wrap text-uppercase>City: <b>{{address.city}} </b></p>
             <p ion-text text-lg text-wrap text-uppercase>State:<b>{{address.state}}</b></p>
            
