--- a/src/pages/apartments/apartments.html
+++ b/src/pages/apartments/apartments.html
@@ -105,7 +105,7 @@
           
           <ng-template pTemplate="colgroup" let-columns>
             <colgroup>
-                <col *ngFor="let col of columns" style="width:100px">
+                <col *ngFor="let col of columns" style="min-width:150px">
             </colgroup>
         </ng-template>
 
