--- a/src/pages/localvendor-orders/localvendor-orders.html
+++ b/src/pages/localvendor-orders/localvendor-orders.html
@@ -109,7 +109,7 @@
           </ng-template>
           <ng-template pTemplate="header" let-columns>
               <tr>
-                  <th *ngFor="let col of columns">
+                  <th *ngFor="let col of columns" pResizableColumn>
                       {{col.header}}
                   </th>
               </tr>
