--- a/src/pages/orders/orders.html
+++ b/src/pages/orders/orders.html
@@ -208,12 +208,12 @@
 
 
         <!-- For MObile Apk-->
-        <p-table #dt showWhen="android,ios" [columns]="cols" [value]="fulfillmentData" [scrollable]="true" [resizableColumns]="true"
+        <p-table #dt1 showWhen="android,ios" [columns]="cols" [value]="fulfillmentData" [scrollable]="true" [resizableColumns]="true"
           [responsive]="true" [(selection)]="selectedFulfillment">
           <ng-template pTemplate="caption">
             <div style="text-align: right">
               <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
-              <input type="text" pInputText size="50" placeholder="Global Filter" (input)="dt.filterGlobal($event.target.value,'contains')"
+              <input type="text" pInputText size="50" placeholder="Global Filter" (input)="dt1.filterGlobal($event.target.value,'contains')"
                 style="max-width:50%">
             </div>
           </ng-template>
