update sample csv file-catalog page

--- a/src/pages/catalog/catalog.html
+++ b/src/pages/catalog/catalog.html
@@ -114,7 +114,7 @@
       <ion-col *ngIf="uploadCatalog">
         <p-fileUpload name="myfile[]" customUpload="true" accept=".csv" (uploadHandler)="myUploader($event)">
           <ng-template pTemplate="content">
-            <a href="https://storage.cloud.google.com/perpule-1248.appspot.com/sample_file_subscription.csv">
+            <a href="https://storage.googleapis.com/perpule-1248.appspot.com/sample_file_subscription.csv">
               <button ion-button small outline>Sample CSV</button>
             </a>
           </ng-template>
